--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'org.apache.commons:commons-lang3:3.4'
     compile 'com.android.support:support-annotations:23.0.1'
+    compile 'com.jakewharton:butterknife:7.0.1'
     compile('com.twitter.sdk.android:twitter:1.8.0@aar') {
         transitive = true;
     }
@@ -46,4 +47,5 @@ dependencies {
     androidTestCompile 'com.android.support.test:runner:0.4'
     androidTestCompile 'com.android.support.test:rules:0.4'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
+    androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.1'
 }
