--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,10 +5,13 @@ buildscript {
 
     dependencies {
         classpath 'io.fabric.tools:gradle:1.20.1'
+        classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
     }
 }
+
 apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
+apply plugin: 'com.jakewharton.hugo'
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
