--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ configurations.all {
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "23.0.3"
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
         applicationId "com.pij.crowdmix"
